compiler/lume_typech/src/tests/snapshots/lume_typech__tests__check__typech_variable_decl_compatible.snap
---
source: compiler/lume_typech/src/tests/check.rs
assertion_line: 5
description: "fn foo() {\n        let _: Int32 = 1_i32;\n    }"
---

